# rts

server/: CMakeLists.txt  run.sh
server/lib-src/: build_stackless.sh
server/lib-src/python-3.2-stackless/: configure.in  setup.py
server/lib-src/python-3.2-stackless/Doc/whatsnew/: 2.6.rst  2.7.rst
server/lib-src/python-3.2-stackless/Include/: patchlevel.h
server/lib-src/python-3.2-stackless/Lib/: pickle.py  pydoc.py  tarfile.py  textwrap.py
server/lib-src/python-3.2-stackless/Lib/distutils/: README  __init__.py  archive_util.py  ccompiler.py  cmd.py  core.py  cygwinccompiler.py  dir_util.py  dist.py  emxccompiler.py  errors.py  extension.py  fancy_getopt.py  file_util.py  filelist.py  msvc9compiler.py  spawn.py  sysconfig.py  text_file.py  unixccompiler.py  util.py  version.py
server/lib-src/python-3.2-stackless/Lib/test/: test_hashlib.py  test_optparse.py  test_sax.py  test_textwrap.py
server/lib-src/python-3.2-stackless/Lib/tkinter/: __init__.py  (+1 more)
server/lib-src/python-3.2-stackless/Misc/: HISTORY  python.man
server/lib-src/python-3.2-stackless/Modules/: mmapmodule.c  ossaudiodev.c  pyexpat.c
server/lib-src/python-3.2-stackless/Parser/: Python.asdl  asdl_c.py
server/lib-src/python-3.2-stackless/Python/: sysmodule.c
server/scala/: build.xml  building.py  run.sh
server/scala/src/: Main.scala
server/scala/src/rts/: JythonTest.scala  PlayerCreator.scala  PythonUnitController.scala  Server.scala  TcpReceiverActor.scala
server/src/: LuaTest.cpp  server.py
server/src/game/: builder.py  commandCentre.py  receiver.py  transmitter.py  unit.py
(+28 files in other folders)
